--- a/src/components/Dao/DaoSchemesPage.scss
+++ b/src/components/Dao/DaoSchemesPage.scss
@@ -1,5 +1,8 @@
 .wrapper {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   h1 {
     color: rgba(104, 155, 214, 1.000);
@@ -8,6 +11,13 @@
     padding-top: 30px;
     background-color: rgba(229, 235, 242, 1.000);
     margin: 0;
+  }
+
+  .allSchemes {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    height: 100%;
+    overflow: auto;
   }
 }
 
@@ -36,13 +46,6 @@
   opacity: 0.01;
   transition: opacity 1000ms ease-in;
 }
-
-.allSchemes {
-  padding-top: 30px;
-  overflow-y: auto;
-  height: calc(100vh - 200px);
-}
-
 
 @media only screen and (max-width: 425px) {
   .wrapper h1 {
