--- a/src/components/Dao/DaoSidebar.scss
+++ b/src/components/Dao/DaoSidebar.scss
@@ -10,10 +10,15 @@
   height: 100%;
   width: 100%;
   display: flex;
+  align-items: flex-start;
 
   .sidebarColumn {
     min-width: 215px;
     max-width: 300px;
+  }
+
+  .contentColumn {
+    height: calc(100vh - 50px);
   }
 
   .sidebarColumn, .contentColumn {
