--- a/src/components/Proposal/ProposalDetails.scss
+++ b/src/components/Proposal/ProposalDetails.scss
@@ -27,8 +27,8 @@ button.disabled {
 .wrapper {
   width: 100%;
   max-width: 1440px;
-  overflow-y: auto;
-  height: calc(100vh - 180px);
+  height: 100%;
+  overflow: auto;
 }
 
 .clickable {
